RESOLVED FIXED146545
REGRESSION(r186025): [SOUP] NetworkCache gets blocked in traverse since r186025
https://bugs.webkit.org/show_bug.cgi?id=146545
Summary REGRESSION(r186025): [SOUP] NetworkCache gets blocked in traverse since r186025
Carlos Garcia Campos
Reported 2015-07-02 05:34:41 PDT
In r186025 the readSync method used when traversing the cache files was removed in favor of using parallel async reads to speed up the traverse. The approach used doesn't work for soup, because the IO operations are async, but run their callbacks in the current thread. The network cache now runs up to 5 async reads in the io work queue thread, and waits for them to finish, and those asycn reads never finish for the soup backend because the thread is blocked waiting for them. We need to use a different thread to run those reads.
Attachments
Patch (5.09 KB, patch)
2015-07-02 05:38 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2015-07-02 05:38:41 PDT
WebKit Commit Bot
Comment 2 2015-07-02 05:40:53 PDT
Attachment 256006 [details] did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannel.h:63: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCacheIOChannelSoup.cpp:183: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Carlos Garcia Campos
Comment 3 2015-07-03 01:46:17 PDT
Note You need to log in before you can comment on or make changes to this bug.